--- a/CoronaSimulatie/CoronaSimulatie.csproj
+++ b/CoronaSimulatie/CoronaSimulatie.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulationObjects\NormalDistributionHelper.cs" />
     <Compile Include="SimulationObjects\Person.cs" />
+    <Compile Include="SimulationObjects\SaveData.cs" />
     <Compile Include="SimulationObjects\Tile.cs" />
     <Compile Include="SimulationObjects\WorldGrid.cs" />
   </ItemGroup>
