--- a/CoronaSimulatie/CoronaSimulatie.csproj
+++ b/CoronaSimulatie/CoronaSimulatie.csproj
@@ -45,11 +45,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulationObjects\App.cs" />
     <Compile Include="SimulationObjects\DataWriter.cs" />
     <Compile Include="SimulationObjects\Globals.cs" />
     <Compile Include="SimulationObjects\NormalDistributionHelper.cs" />
     <Compile Include="SimulationObjects\Person.cs" />
     <Compile Include="SimulationObjects\SaveData.cs" />
+    <Compile Include="SimulationObjects\Shuffle.cs" />
     <Compile Include="SimulationObjects\Tile.cs" />
     <Compile Include="SimulationObjects\WorldGrid.cs" />
   </ItemGroup>
